<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ltechtesttask.presentation.loginFragment.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.ltechtesttask.presentation.mainFragment.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_mainFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.ltechtesttask.presentation.detailsFragment.DetailsFragment"
        android:label="@string/details" />
</navigation>