<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/vLogoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/logo_gradient"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginBottom="@dimen/space_normal"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/vLogoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/vEnterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            app:maskCharacter="_"
            app:maskStyle="completable"/>

        <EditText
            android:id="@+id/vEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/vLoginButton"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/l_tech_blue"
            android:text="@string/sign_in"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/vLoader"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:background="@color/main_white_60"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>